manifests/openshift-secure/capture/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: pcap-capture
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-control-portal-to-backend-engine
  namespace: pcap-capture
spec:
  podSelector:
    matchLabels:
      app: spcg-backend-engine
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              spcg.io/role: control
          podSelector:
            matchLabels:
              app: spcg-ui-portal
      ports:
        - protocol: TCP
          port: 8443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-sensor-to-backend-collector
  namespace: pcap-capture
spec:
  podSelector:
    matchLabels:
      app: spcg-backend-engine
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 19000
          endPort: 19999
    - from:
        - podSelector:
            matchLabels:
              app: spcg-sensor
        - namespaceSelector:
            matchLabels:
              spcg.io/role: capture
      ports:
        - protocol: TCP
          port: 19000
          endPort: 19999
